fix swagger consumes and produces statements
