# adventurer-specs/src/main/resources/api-spec.yaml
@@ -10,6 +10,8 @@ paths:
     get:
       operationId: getAdventurers
       summary: Get adventurers informations
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/Limit'
         - $ref: '#/parameters/Offset'
@@ -23,6 +25,8 @@ paths:
     post:
       operationId: createAdventurer
       summary: Create a new adventurer
+      produces:
+        - application/json
       parameters:
         - name: adventurer
           in: body
@@ -44,6 +48,8 @@ paths:
     get:
       operationId: getAdventurer
       summary: Get an adventurer informations
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/Name'
       responses:
@@ -56,6 +62,10 @@ paths:
     put:
       operationId: updateAdventurer
       summary: Update adventurer informations
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/Name'
         - name: informations
@@ -92,6 +102,8 @@ paths:
     get:
       operationId: getQuests
       summary: Get quests informations
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/Limit'
         - $ref: '#/parameters/Offset'
@@ -105,6 +117,10 @@ paths:
     post:
       operationId: createQuest
       summary: Create a new quest
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - name: quest
           in: body
@@ -117,7 +133,7 @@ paths:
         200:
           description: quest creation success
           schema:
-            $ref: '#/definitions/Adventurer'
+            $ref: '#/definitions/Quest'
         400:
           description: quest creation failed
         401:
@@ -126,6 +142,8 @@ paths:
     get:
       operationId: getQuest
       summary: Get a quest informations
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/QuestID'
       responses:
@@ -138,6 +156,10 @@ paths:
     put:
       operationId: updateQuest
       summary: Update a quest informations
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/QuestID'
         - name: informations
@@ -184,6 +206,8 @@ paths:
     post:
       operationId: endQuest
       summary: Ends a quest and checks participants' ranks.
+      produces:
+        - application/json
       parameters:
         - $ref: '#/parameters/QuestID'
       security:
@@ -201,6 +225,8 @@ paths:
     post:
       operationId: joinQuest
       summary: An adventurer joins a quest
+      consumes:
+        - multipart/form-data
       parameters:
         - name: adventurerName
           description: Adventurer joining a quest.
@@ -230,13 +256,15 @@ paths:
     delete:
       operationId: quitQuest
       summary: An adventurer quits a quest
+      consumes:
+        - multipart/form-data
       parameters:
-        - name: adventurer
+        - name: adventurerName
           description: Adventurer joining a quest.
           in: formData
           type: string
           required: true
-        - name: quest
+        - name: questId
           description: Quest to join.
           in: formData
           type: integer
@@ -252,10 +280,6 @@ paths:
           description: adventurer or quest not found
         405:
           description: cannot quit an ended quest
-          headers:
-            Allow:
-              type: string
-              description: Allowed methods
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -334,7 +358,7 @@ definitions:
         type: string
   Participation:
     type: object
-    properties: 
+    properties:
       adventurer:
         type: string
       quest:
